ajustando o atributo for da label do telefone para linkar a id certa

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <form>
                     <label for="nome" class="form-label">Seu nome:</label>
                     <input id="nome" type="text" class="form-control">
-                    <label for="mensagem" class="form-label">Seu telefone:</label>
+                    <label for="tel" class="form-label">Seu telefone:</label>
                     <input id="tel" type="tel" class="form-control">
                     <label for="email" class="form-label">Seu e-mail:</label>
                     <input id="email" type="email" class="form-control">
